# full-stack-fastapi-template

./: docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: backend_pre_start.py  crud.py  initial_data.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: e2412789c190_initialize_models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/utils/: item.py  user.py
backend/scripts/: test.sh
frontend/: Dockerfile  README.md  biome.json  bun.lockb  modify-openapi-operationids.js  package.json
frontend/.husky/: pre-commit
frontend/src/: main.tsx
frontend/src/components/UserSettings/: DeleteConfirmation.tsx  UserInformation.tsx
frontend/src/routes/: reset-password.tsx
